# nyc-taxi-spatiotemporal-analysis

./: .gitignore  AGENTS.md  CLAUDE.md  Data Analyst - Remote (Hatonet).md  Lê Quang Phú Resume.md  README.md  STREAMLIT_CLOUD_DEPLOYMENT.md  logs-lequangphu-nyc-taxi-spatiotemporal-analysis-main-src-dashboard-app.py-2026-03-11T03_26_00.969Z.txt  logs-lequangphu-nyc-taxi-spatiotemporal-analysis-main-src-dashboard-app.py-2026-03-11T03_32_05.473Z.txt  logs-lequangphu-nyc-taxi-spatiotemporal-analysis-main-src-dashboard-app.py-2026-03-11T03_56_30.735Z.txt  main.py  pyproject.toml  requirements.txt  run_app.py  streamlit_app.py
.streamlit/: config.toml
src/anomaly/: __init__.py
src/dashboard/: app.py
src/data/: download.py  transform.py
src/eda/: __init__.py  stats.py
src/nyc_taxi_spatiotemporal_analysis/: __init__.py
src/nyc_taxi_spatiotemporal_analysis/anomaly/: detector.py
src/nyc_taxi_spatiotemporal_analysis/dashboard/: __init__.py  app.py
src/nyc_taxi_spatiotemporal_analysis/data/: __init__.py  download.py
src/nyc_taxi_spatiotemporal_analysis/eda/: spatial.py  temporal.py
src/zones/: __init__.py  grouper.py
