[project]
name = "nyc-taxi-spatiotemporal-analysis"
version = "0.1.0"
description = "NYC Taxi Spatiotemporal Analysis - EDA, Zone Grouping, and Anomaly Detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.20.0",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anomaly", "src/dashboard", "src/data", "src/eda", "src/zones"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
